separate index.jsx into components, add links, fix apply button class

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -47,98 +47,12 @@ p {
 }
 
 header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	background-color: rgba(0, 0, 0, 0.5);
 	padding: 8px;
 	backdrop-filter: blur(10px);
-}
-
-.colorizer {
-	padding: 8px;
-}
-
-.colors {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-
-.colorView {
-	width: 24px;
-	height: 24px;
-	border-radius: 2px;
-	margin: 4px 2px;
-}
-
-.manualBuilderParts {
-	display: flex;
-	justify-content: center;
-	font-weight: bold;
-	color: white;
-}
-
-.banner {
-	border-radius: 10px;
-}
-
-input:not([type='color']),
-select,
-textarea {
-	background-color: black;
-	color: #eee;
-	border: 1px solid rgba(255, 255, 255, 0.2);
-	text-align: center;
-	padding: 4px;
-	border-radius: 10px;
-}
-
-input:not([type='color']),
-textarea {
-	flex: 1;
-	width: 100%;
-}
-
-h2 {
-	background-color: rgba(0, 0, 0, 0.4);
-	/* text-decoration: underline; */
-	border-radius: 10px;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7),
-		inset 1px 1px 1px rgba(255, 255, 255, 0.5);
-}
-
-button {
-	background-color: blueviolet;
-	color: white;
-	font-weight: bold;
-	border-radius: 5px;
-	border: 1px solid rgba(255, 255, 255, 0.2);
-	padding: 2px 16px;
-	margin: 4px;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7),
-		inset 1px 1px 1px rgba(255, 255, 255, 0.5);
-}
-
-button:active {
-	box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.7),
-		inset -2px -2px 2px rgba(0, 0, 0, 0.7);
-	border: 1px solid black;
-}
-
-button.disabled {
-	background-color: darkgray;
-}
-
-button.disabled:active {
-	box-shadow: inset 2px 2px 2px rgba(161, 4, 4, 0.7),
-		inset -2px -2px 2px rgba(161, 4, 4, 0.7);
-	border: 1px solid black;
-}
-
-form {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding: 0 20%;
 }
 
 @media screen and (max-width: 780px) {
